# nightona

./: .licenserc-clients.yaml  .licenserc.yaml  BRANDING-TODO.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION.md  NOTICE  PACKAGING.md  PREPARING_YOUR_CHANGES.md  PUBLISHING.md  README.md  SECURITY.md  go.work  nx.json
.claude/agents/: batch-dependabot.md
.github/: CODEOWNERS  actionlint.yaml
.github/workflows/: build_devcontainer.yaml  default_image_publish.yaml  e2e_pr_tests.yaml  pr_checks.yaml  pr_docker_build.yaml  prepare-release.yaml  release.yaml  sdk_publish.yaml  translate.yaml
apps/cli/: envcompat.go  go.mod  go.sum  main.go  project.json
apps/daemon/: go.mod  go.sum  project.json
apps/dashboard/: index.html
apps/docs/: CONTRIBUTING.md  Dockerfile  README.md  astro.config.mjs
apps/nightona-e2e/: .env.e2e  git_clone_test.go  go.mod  go.sum
apps/otel-collector/: Dockerfile  builder-config.dev.yaml  builder-config.yaml
apps/proxy/: Dockerfile  go.mod  go.sum  project.json
apps/runner/: Dockerfile  go.mod  go.sum  project.json
apps/snapshot-manager/: Dockerfile  go.mod  go.sum  project.json
apps/ssh-gateway/: Dockerfile  envcompat.go  go.mod  go.sum  main.go  project.json  teardown_test.go
docker/: docker-compose.build.override.yaml  docker-compose.yaml
examples/java/: README.md
guides/python/ai-data-analyst/openai/: pyproject.toml
guides/python/reinforcement-learning/openenv/: pyproject.toml
guides/python/reinforcement-learning/verl-retool/: pyproject.toml
hack/computer-use/: build-computer-use-amd64.sh
images/sandbox/: README.md  project.json
images/sandbox-gpu/: README.md  project.json
images/sandbox-slim/: Dockerfile  README.md  project.json
libs/analytics-api-client/: package.json  project.json
libs/api-client-go/: go.mod  project.json
libs/api-client-java/: README.md  (+2 more)
scripts/: setup-domain-oss-deployment.sh
(+425 files in other folders)
