[project]
name = "nightona-openenv-finqa"
version = "0.1.0"
description = "FinQA evaluation and training on Nightona sandboxes using OpenEnv"
authors = [{name = "Nightona Team", email = "amaraaamka0404@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nightona",
    "python-dotenv>=1.2.0",
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-finqa-env @ git+https://github.com/meta-pytorch/OpenEnv.git#subdirectory=envs/finqa_env",
]

[project.optional-dependencies]
train = [
    "torch==2.9.1",
    "transformers==4.57.6",
    "vllm==0.16.0",
    "numpy==2.2.6",
    "peft==0.18.1",
    "requests>=2.31.0",
]

[tool.setuptools]
py-modules = []
