[project]
name = "nightona-verl-retool"
version = "0.1.0"
description = "Companion files for benchmarking veRL ReTool backends with Nightona"
authors = [{name = "Nightona Team", email = "amaraaamka0404@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nightona>=0.128.1,<1.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
